--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "next": "12.3.1",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-drag-drop-files": "^2.3.8"
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@types/node": "18.11.0",
+    "@types/nodemailer": "^6.4.7",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "eslint": "8.25.0",
